# grpc-golang-python

./: Makefile
client/: main.py  math_pb2.py  math_pb2_grpc.py  number_pb2.py  number_pb2_grpc.py  pyproject.toml
proto/: Makefile  math.proto  number.pb.go  number.proto  number_grpc.pb.go  pyproject.toml
protobufs/: Makefile  number.proto
server/: go.mod  main.go
server/buffers/number/: number.pb.go  number_grpc.pb.go
server/protobuffers/: math.pb.go  math_grpc.pb.go
